--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -149,10 +149,7 @@
 
 .Star {
   font-size: 12px;
-  background: linear-gradient(45deg, #f7e5ad, #ffeb78, #ffec40);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  color: #ffec40;
+  color: #ffec40 !important; /* Ensure this is gold */
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -216,18 +213,7 @@
 
 .RatingDropdown :global(.dropdown-item) {
   padding: 10px 10px !important;
-  color: #000000 !important;
-  background-color: #ffffff !important;
-  font-size: 0.75rem !important;
-  line-height: 1.5 !important;
-  cursor: pointer !important;
-  white-space: nowrap !important;
-  -webkit-font-smoothing: antialiased !important;
-  text-rendering: optimizeLegibility !important;
-  font-family: "Poppins", sans-serif!important;
-  font-weight: 600 !important;
   text-shadow: 0 0 0px rgba(0, 0, 0) !important;
-  transform: none !important;
 }
 
 .RatingDropdown :global(.dropdown-item:hover) {
@@ -295,4 +281,13 @@
     font-size: 0.6rem !important;
     padding: 0px 4px !important;
   }
+}
+
+/* Updated DropdownStar */
+.DropdownStar {
+  font-size: 12px;
+  color: #ffec40 !important; /* Ensure stars are gold */
+  background: none !important; /* Remove background gradient */
+  -webkit-background-clip: unset !important; /* Ensure no background clip */
+  -webkit-text-fill-color: unset !important; /* Ensure the text fill is normal */
 }
