--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -129,9 +129,6 @@
   align-items: center;
   gap: 3px;
   color: #ffec40;
-  background: linear-gradient(45deg, #f7e5ad, #ffeb78, #ffec40);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -186,7 +183,7 @@
 }
 
 .RatingDropdown :global(.dropdown-menu) {
-  background-color: #ffffff !important;
+  background-color: rgba(0, 0, 0, 0.6) !important;
   color: #000000 !important;
   font-size: 0.5rem !important;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3) !important;
@@ -196,13 +193,14 @@
   -webkit-font-smoothing: antialiased !important;
   text-rendering: optimizeLegibility !important;
   font-family: Arial, sans-serif !important;
-  bottom: 4px !important;
+  bottom: 3.5px !important;
   left: -11px !important;
   opacity: 0;
   transform: translateY(10px);
   transition: opacity 0.3s ease, transform 0.3s ease;
   display: block !important;
   pointer-events: none;
+  border-radius: 0 !important;
 }
 
 .RatingDropdown :global(.show.dropdown-menu) {
@@ -285,9 +283,14 @@
 
 /* Updated DropdownStar */
 .DropdownStar {
-  font-size: 12px;
-  color: #ffec40 !important; /* Ensure stars are gold */
-  background: none !important; /* Remove background gradient */
-  -webkit-background-clip: unset !important; /* Ensure no background clip */
-  -webkit-text-fill-color: unset !important; /* Ensure the text fill is normal */
+  font-size: 12.15px;
+  color: #ffec40 !important;
+  background: none !important;
+  -webkit-background-clip: unset !important;
+  -webkit-text-fill-color: unset !important;
+}
+
+.RatingStar {
+  font-size: 24px;
+  color: transparent;
 }
