--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -134,6 +134,40 @@
   cursor: pointer;
 }
 
+.CanChangeRating {
+  position: relative;
+  cursor: pointer;
+}
+
+.CanChangeRating::after {
+  content: "Click to change rating";
+  position: absolute;
+  top: -24px;
+  left: -15px;
+  font-size: 8px;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 4px 8px;
+  border-radius: 4px;
+  opacity: 0;
+  white-space: nowrap;
+  pointer-events: none;
+  transform: translateY(5px);
+  transition: opacity 0.2s ease, transform 0.2s ease;
+  z-index: 10;
+}
+
+.CanChangeRating:hover::after {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* .DebugTooltipVisible::after {
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+  pointer-events: auto !important;
+} */
+
 .AverageRating {
   font-size: 0.5rem;
   font-weight: bold;
