--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,14 +1,23 @@
 .App {
+  position: relative;
   font-family: "Poppins", sans-serif;
-  background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1747753016/speaker-5_anyalo.jpg");
+  background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1747776435/speaker-15_vprxgf.jpg");
   background-repeat: repeat;
-  background-size: 300px;
+  background-size: 550px;
   background-attachment: fixed;
   background-position: center;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.App::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 0;
 }
 
 
