--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -122,7 +122,7 @@
   font-size: 5rem;
   font-weight: bold;
   color: white;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   gap: 10px;
   text-transform: lowercase;
