--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -256,25 +256,44 @@
   margin-bottom: 1.5rem;
 }
 
+.infoCardWrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 1rem;
+}
+
 .infoCard {
-  background: rgba(255, 255, 255, 0.2);
+  flex: 1;
+  background: #ffffff;
   border-radius: 12px;
   padding: 1rem;
-  margin-bottom: 1rem;
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   color: #252525;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .infoImage {
   width: 100%;
-  height: auto;
+  height: 20rem;
+  background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1748115940/hero-20_mtse8s.avif");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   border-radius: 12px;
-  margin-top: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  opacity: 0.99;
+  z-index: 0;
+  filter: blur(3px);
+  mask-image: radial-gradient(circle, rgba(0,0,0,1) 40%, rgba(0,0,0,0) 100%);
+  -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 40%, rgba(0,0,0,0) 100%);
 }
+
 
 .heroSection {
   position: relative;
@@ -322,3 +341,13 @@
     background-position: center 30%;
   }
 }
+
+@media (max-width: 767.98px) {
+  .infoCol {
+    margin-bottom: 1rem;
+  }
+}
+
+  .infoCol:last-child {
+    margin-bottom: 0;
+  }
