--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -285,9 +285,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 5rem;
+  font-size: 10rem;
   color: rgba(0, 0, 0, 0.05);
-  z-index: 0; /* Sit behind text */
+  z-index: 0;
   pointer-events: none;
 }
 
