Change font type and transform to uppercase the title on info card & add global style to oveerride bootstrap column padding

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -129,3 +129,11 @@ figure {
 .PageNotFound {
   color: #ffffff;
 }
+
+/* Override Bootstrap column padding to reduce gutter spacing from 15px to 10px */
+@media (max-width: 767.98px) {
+  [class*="col"] {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+  }
+}
