Temporarily change colour of link

--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -426,7 +426,7 @@
     bottom: 1rem;
     right: 1rem;
     font-size: 0.8rem;
-    color: #007bff;
+    color: #0d0e0e;
     cursor: pointer;
     text-align: left;
   }
