--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -283,6 +283,12 @@
   pointer-events: none;
 }
 
+@media (min-width: 992px) {
+  .iconBackground {
+    font-size: 10rem;
+  }
+}
+
 .infoHeader,
 .infoText,
 .learnMoreLink {
