--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -424,7 +424,7 @@
     bottom: 1rem;
     right: 1rem;
     font-size: 0.8rem;
-    color: red;
+    color: black;
     cursor: pointer;
     text-align: left;
   }
