--- a/src/styles/EventsPage.module.css
+++ b/src/styles/EventsPage.module.css
@@ -95,3 +95,20 @@
     background-position: center 45%;
   }
 }
+
+.infoCard {
+  position: relative;
+  flex: 1;
+  background: #ffffff;
+  border-radius: 12px;
+  padding: 1rem;
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  color: #252525;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+}
