Change colour of toptrack card

--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -429,7 +429,7 @@
     bottom: 1rem;
     right: 1rem;
     font-size: 0.7rem;
-    color: red;
+    color: black;
     cursor: pointer;
     text-align: left;
   }
