Change colour of card

--- a/src/styles/TopTracks.module.css
+++ b/src/styles/TopTracks.module.css
@@ -1,6 +1,6 @@
 .topTracksSection {
     padding: 1rem;
-    background-color: #df1313;
+    background-color: white;
     border-radius: 12px;
   }
   
