--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -258,20 +258,13 @@
 .infoCard {
   position: relative;
   flex: 1;
-  background: linear-gradient(145deg, #f9f9f9, #e0e0e0); /* Soft gradient */
+  background: transparent;
   border-radius: 12px;
   padding: 1rem;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05), inset 0 0 8px rgba(255, 255, 255, 0.3);
   color: #252525;
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
-  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
 }
 
 .infoCard:hover {
@@ -453,6 +446,8 @@
     z-index: 2;
     text-transform: uppercase;
     font-family: 'Exo 2', sans-serif;
+    letter-spacing: 2px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   }
   
   .learnMoreLink {
