--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -264,6 +264,8 @@
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
 }
 
 /*.infoCard:hover {
@@ -289,18 +291,21 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 6.5rem;
-  color: #aba9aefa; /* Base color */
-  filter: drop-shadow(0 0 2px #a3a1a1) drop-shadow(0 0 12px #e3e2e1);
+  font-size: 5rem;
+  color: #cfced3; /* Base color */
+  filter: 
+    drop-shadow(2px 2px 8px rgba(0, 0, 0, 0.25))
+    drop-shadow(0 0 15px rgba(0, 255, 255, 0.1))
+    drop-shadow(0 0 40px rgba(0, 255, 255, 0.1));
   z-index: 2;
   pointer-events: none;
   transition: transform 0.3s ease, filter 0.3s ease;
+  filter: blur(1px);
 }
 
 /* Assuming .infoCard wraps .iconBackground */
 .infoCard:hover .iconBackground {
   transform: translate(-50%, -50%) scale(1.05);
-  filter: brightness(1.2);
 }
 
 @media (min-width: 992px) {
@@ -355,8 +360,16 @@
 */
 
 .shortTitle {
-  font-size: 1rem;
-  font-weight: 100;
+  font-size: 1.3rem;
+  font-weight: 500;
+  transition: text-shadow 0.3s ease-in-out;
+}
+
+.shortTitle:hover {
+  text-shadow:
+    0 0 5px rgba(0, 255, 255, 0.2),
+    0 0 10px rgba(0, 255, 255, 0.1),
+    0 0 15px rgba(0, 255, 255, 0.1);
 }
 
 .fullTitle {
@@ -364,11 +377,17 @@
   font-weight: 500;
   margin-bottom: 1rem;
   text-transform: uppercase;
+  color: #ffffff;
+  margin: 5px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
 .infoText {
-  color: black;
+  color: #ffffff;
   font-size: 0.5rem;
+  margin: 5px;
+  padding-top: 8px;
+  text-shadow: 3px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 .heroSection {
@@ -446,7 +465,7 @@
 
   .infoCard {
     min-height: 150px;
-    background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1751025354/wave-2_izm4kw.avif");
+    background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1751143668/pic-5_dq37p4.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -484,20 +503,24 @@
   text-transform: uppercase;
   font-family: "Exo 2", sans-serif;
   letter-spacing: 2px;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 1),
-    0 0 20px rgba(255, 255, 255, 0.9), 0 0 30px rgba(255, 255, 255, 0.8),
-    0 0 40px rgba(255, 255, 255, 0.7), 0 0 60px rgba(255, 255, 255, 0.6),
-    0 0 80px rgba(255, 255, 255, 0.5);
+  color: #ffffff;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
 }
 
 .learnMoreLink {
   position: absolute;
-  bottom: 1rem;
-  right: 1rem;
-  font-size: 0.9rem;
-  color: #9a99a0;
+  bottom: 0.1rem;
+  right: 0.7rem;
+  font-size: 1.5rem;
+  color: #ffffff;
   cursor: pointer;
   text-align: left;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s ease;
+}
+
+.learnMoreLink:hover {
+  transform: translateY(-5px);
 }
 
 .alignStretch {
