--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -276,7 +276,10 @@
   position: absolute;
   inset: 0;
   background: rgba(255, 255, 255, 0.5);
-  background-image: radial-gradient(rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+  background-image: radial-gradient(
+    rgba(255, 255, 255, 0.05) 1px,
+    transparent 1px
+  );
   background-size: 4px 4px;
   z-index: 0;
 }
@@ -306,8 +309,7 @@
   transform: translate(-50%, -50%);
   font-size: 5rem;
   color: #cfced3; /* Base color */
-  filter: 
-    drop-shadow(2px 2px 8px rgba(0, 0, 0, 0.25))
+  filter: drop-shadow(2px 2px 8px rgba(0, 0, 0, 0.25))
     drop-shadow(0 0 15px rgba(0, 255, 255, 0.1))
     drop-shadow(0 0 40px rgba(0, 255, 255, 0.1));
   z-index: 2;
@@ -379,30 +381,82 @@
 }
 
 .shortTitle:hover {
-  text-shadow:
-    0 0 5px rgba(0, 255, 255, 0.2),
-    0 0 10px rgba(0, 255, 255, 0.1),
+  text-shadow: 0 0 5px rgba(0, 255, 255, 0.2), 0 0 10px rgba(0, 255, 255, 0.1),
     0 0 15px rgba(0, 255, 255, 0.1);
 }
 
 .fullTitle {
+  font-family: "Exo 2", sans-serif;
   font-size: 0.75rem;
   font-weight: 600;
   margin-bottom: 1rem;
   text-transform: uppercase;
   color: #ffffff;
   margin: 5px;
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  letter-spacing: 0.5px;
 }
 
 .infoText {
   color: #ffffff;
-  font-size: 0.5rem;
+  font-size: 0.55rem;
+  font-weight: 600;
   margin: 5px;
-  padding-top: 8px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), -1px -1px 1px rgba(0, 0, 0, 0.2),
+    -1px 1px 1px rgba(0, 0, 0, 0.2), 1px -1px 1px rgba(0, 0, 0, 0.2);
   letter-spacing: 0.3px;
-  line-height: 1.6;
+  line-height: 2;
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.infoText li {
+  opacity: 0;
+  animation: fadeIn 0.5s ease forwards;
+}
+
+.infoText li:nth-child(1) {
+  animation-delay: 0s;
+}
+.infoText li:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.infoText li:nth-child(3) {
+  animation-delay: 0.4s;
+}
+.infoText li:nth-child(4) {
+  animation-delay: 0.6s;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+}
+
+.infoText li:nth-child(1) {
+  color: #f7e8af;
+}
+.infoText li:nth-child(2) {
+  color: #ffffff;
+}
+.infoText li:nth-child(3) {
+  color: #abebe7;
+}
+.infoText li:nth-child(4) {
+  color: #dcdcff;
+}
+
+.bullet {
+  color: #ffffff;
+  font-weight: bold;
+  margin-right: 4px;
+  font-size: 0.7rem;
 }
 
 .heroSection {
@@ -481,7 +535,7 @@
   .infoCard {
     min-height: 150px;
   }
-    /* background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1751143668/pic-5_dq37p4.jpg");
+  /* background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1751143668/pic-5_dq37p4.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
