--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -575,7 +575,20 @@
   letter-spacing: 2px;
   color: #ffffff;
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
+
+  opacity: 0;
+  transform: translate(-50%, -60%);
+  animation: fadeSlideIn 1.5s ease-out forwards;
 }
+
+@keyframes fadeSlideIn {
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+
 
 .learnMoreLink {
   position: absolute;
