--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -389,13 +389,24 @@
   font-family: "Exo 2", sans-serif;
   font-size: 0.75rem;
   font-weight: 600;
-  margin-bottom: 1rem;
   text-transform: uppercase;
   color: #ffffff;
   margin: 5px;
+  margin-bottom: 1rem;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   letter-spacing: 0.5px;
+  opacity: 0;
+  transform: translateY(-10px);
+  animation: fadeSlideDown 0.8s ease-out 0.2s forwards;
 }
+
+@keyframes fadeSlideDown {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 
 .infoText {
   color: #ffffff;
@@ -577,7 +588,7 @@
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
 
   opacity: 0;
-  transform: translate(-50%, -60%);
+  transform: translate(-50%, -50%);
   animation: fadeSlideIn 1.5s ease-out forwards;
 }
 
@@ -587,8 +598,6 @@
     transform: translate(-50%, -50%);
   }
 }
-
-
 
 .learnMoreLink {
   position: absolute;
