--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -65,12 +65,36 @@
 
 .NavIcon:hover {
   cursor: pointer;
-  transition: color ease-in-out 0.3s;
-  color: #007bff;
+  transition: all 0.3s ease-in-out;
+  color: #cfced3;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.05),
+    0 0 1px rgba(255, 255, 255, 0.5),
+    0 0 5px rgba(200, 255, 255, 0.3),
+    0 0 9px rgba(200, 255, 255, 0.1);
+  background: linear-gradient(
+    45deg,
+    rgba(0, 255, 255, 0.7),
+    rgba(255, 0, 255, 0.7)
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .Active i {
-  color: #007bff;
+  color: #cfced3;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.05),
+    0 0 1px rgba(255, 255, 255, 0.5),
+    0 0 5px rgba(200, 255, 255, 0.3),
+    0 0 9px rgba(200, 255, 255, 0.1);
+  background: linear-gradient(
+    45deg,
+    rgba(0, 255, 255, 0.7),
+    rgba(255, 0, 255, 0.7)
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* RESPONSIVE TWEAKS */
