--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -389,12 +389,11 @@
 
 .fullTitle {
   font-family: "Exo 2", sans-serif;
-  font-size: 0.75rem;
+  font-size: 0.79rem;
   font-weight: 600;
   text-transform: uppercase;
   color: #ffffff;
   margin: 5px;
-  margin-bottom: 1rem;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   letter-spacing: 0.5px;
   opacity: 0;
@@ -412,7 +411,7 @@
 
 .infoText {
   color: #ffffff;
-  font-size: 0.55rem;
+  font-size: 0.64rem;
   font-weight: 600;
   margin: 5px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), -1px -1px 1px rgba(0, 0, 0, 0.2),
@@ -421,6 +420,12 @@
   line-height: 2;
   list-style-type: none;
   padding-left: 0;
+}
+
+@media (max-width: 375px) {
+  .infoText {
+    font-size: 0.5rem;
+  }
 }
 
 .infoText li {
@@ -468,7 +473,7 @@
 .bullet {
   color: #ffffff;
   font-weight: bold;
-  margin-right: 4px;
+  margin-right: 2px;
   font-size: 0.7rem;
 }
 
