Change colour of top racks box

--- a/src/styles/TopTracks.module.css
+++ b/src/styles/TopTracks.module.css
@@ -1,6 +1,6 @@
 .topTracksSection {
     padding: 1rem;
-    background-color: white;
+    background-color: #909090;
     border-radius: 12px;
   }
   
