--- a/src/styles/TopTracks.module.css
+++ b/src/styles/TopTracks.module.css
@@ -10,7 +10,7 @@
   .topTracksSection {
     padding: 1rem;
     border-radius: 12px;
-    background-color: #2c2c2c;
+    background-color: #909090;
     background-image: 
       radial-gradient(rgba(255, 255, 255, 0.04) 1px, transparent 1px),
       linear-gradient(
@@ -109,7 +109,7 @@
   }
   
   .trackTitle {
-    color: #00ffff;
+    color: #ffffff;
     font-weight: bold;
     font-size: 0.59rem;
   }
