--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -468,7 +468,7 @@
   }
 }
 
-.infoText li:nth-child(1) {
+/* .infoText li:nth-child(1) {
   color: #f7e8af;
 }
 .infoText li:nth-child(2) {
@@ -479,7 +479,7 @@
 }
 .infoText li:nth-child(4) {
   color: #dcdcff;
-}
+} */
 
 .bullet {
   color: #ffffff;
