--- a/src/styles/TopTracks.module.css
+++ b/src/styles/TopTracks.module.css
@@ -20,8 +20,10 @@
         rgba(255, 255, 255, 0) 100%
       );
     background-size: 6px 6px, 200% 100%;
-    box-shadow: 0 4px 15px rgba(0, 255, 255, 0.1);
     color: #cfced3;
+    box-shadow:
+    0 0 10px rgba(0, 255, 255, 0.1),
+    0 4px 20px rgba(0, 0, 0, 0.3);
   }
   
   /* Title Styling */
