--- a/src/styles/TopTracks.module.css
+++ b/src/styles/TopTracks.module.css
@@ -1,131 +1,129 @@
 @keyframes trackGlow {
-    0% {
-      background-position: 0 0;
-    }
-    100% {
-      background-position: 200% 0;
-    }
+  0% {
+    background-position: 0 0;
   }
-  
-  .topTracksSection {
-    padding: 1rem;
-    border-radius: 12px;
-    background-color: #909090;
-    background-image: 
-      radial-gradient(rgba(255, 255, 255, 0.04) 1px, transparent 1px),
-      linear-gradient(
-        120deg,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 0.07) 50%,
-        rgba(255, 255, 255, 0) 100%
-      );
-    background-size: 6px 6px, 200% 100%;
-    color: #cfced3;
-    box-shadow:
-    0 0 10px rgba(0, 255, 255, 0.1),
-    0 4px 20px rgba(0, 0, 0, 0.3);
+  100% {
+    background-position: 200% 0;
   }
-  
-  /* Title Styling */
-  .topTracksSection h3 {
-    font-family: "Exo 2", sans-serif;
-    font-size: 1.3rem;
-    margin-bottom: 1rem;
-    text-shadow: 0 0 8px rgba(0, 255, 255, 0.3);
-    text-align: center;
-    color: #cfced3;
-  }
-  
-  /* Grid for 2 columns */
-  .tracksGrid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 1rem;
-    padding: 0;
-    margin: 0;
-  }
-  
-  /* Columns wrapper for 2 sets of 5 tracks */
-  .columnsWrapper {
-    display: flex;
-    justify-content: space-between;
-    gap: 0.5rem;
-  }
-  
-  .column {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  /* Wrapper for numbered track */
-  .trackWrapper {
-    display: flex;
-    align-items: stretch;
-    margin-bottom: 0.75rem;
-  }
-  
-  /* Number column */
-  .trackNumber {
-    font-weight: bold;
-    font-size: 1.2rem;
-    padding: 0 0.75rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 2rem;
-    border-radius: 8px 0 0 8px;
-    color: #cfced3;
-    text-shadow:
-      1px 2px 2px rgba(0, 0, 0, 0.05),
-      0 0 1px rgba(255, 255, 255, 0.5),
-      0 0 5px rgba(200, 255, 255, 0.3),
-      0 0 9px rgba(200, 255, 255, 0.1);
-    background: linear-gradient(
-      45deg,
-      rgba(0, 255, 255, 0.7),
-      rgba(255, 0, 255, 0.7)
+}
+
+.topTracksSection {
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: #909090;
+  background-image: radial-gradient(
+      rgba(255, 255, 255, 0.04) 1px,
+      transparent 1px
+    ),
+    linear-gradient(
+      120deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.07) 50%,
+      rgba(255, 255, 255, 0) 100%
     );
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  
-  
-  /* Individual track card */
-  .trackCard {
-    flex: 1;
-    padding: 0.25rem;
-    border-radius: 0 10px 10px 0;
-    background: rgba(255, 255, 255, 0.03);
-    backdrop-filter: blur(5px);
-    box-shadow: 0 0 10px rgba(0, 255, 255, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    color: #ffffff;
-    font-size: 0.9rem;
-  }
-  
-  .trackCard:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);
-  }
-  
-  .trackTitle {
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 0.59rem;
-  }
-  
-  .trackArtist {
-    text-transform: uppercase;
-    font-size: 0.6rem;
-    color: #dddddd;
-  }
-  
-  .topTracksSection ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  
+  background-size: 6px 6px, 200% 100%;
+  color: #cfced3;
+  box-shadow: 0 0 10px rgba(0, 255, 255, 0.1), 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+/* Title Styling */
+.topTracksSection h3 {
+  font-family: "Exo 2", sans-serif;
+  /* font-size: 1.3rem; */
+  margin-bottom: 1rem;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3), 0 0 25px rgba(0, 255, 255, 0.2), 0 0 50px rgba(0, 255, 255, 0.2);
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+/* Grid for 2 columns */
+.tracksGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 1rem;
+  padding: 0;
+  margin: 0;
+}
+
+/* Columns wrapper for 2 sets of 5 tracks */
+.columnsWrapper {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+}
+
+.column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Wrapper for numbered track */
+.trackWrapper {
+  display: flex;
+  align-items: stretch;
+  margin-bottom: 0.75rem;
+}
+
+/* Number column */
+.trackNumber {
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding: 0 0.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 2rem;
+  border-radius: 8px 0 0 8px;
+  color: #cfced3;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.05), 0 0 1px rgba(255, 255, 255, 0.5),
+    0 0 5px rgba(200, 255, 255, 0.3), 0 0 9px rgba(200, 255, 255, 0.1);
+  background: linear-gradient(
+    45deg,
+    rgba(0, 255, 255, 0.7),
+    rgba(255, 0, 255, 0.7)
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* Individual track card */
+.trackCard {
+  flex: 1;
+  padding: 0.25rem;
+  border-radius: 0 10px 10px 0;
+  background: rgba(255, 255, 255, 0.03);
+  backdrop-filter: blur(5px);
+  box-shadow: 0 0 10px rgba(0, 255, 255, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  color: #ffffff;
+  font-size: 0.9rem;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), -1px -1px 1px rgba(0, 0, 0, 0.2),
+    -1px 1px 1px rgba(0, 0, 0, 0.2), 1px -1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.trackCard:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);
+}
+
+.trackTitle {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 0.59rem;
+}
+
+.trackArtist {
+  text-transform: uppercase;
+  font-size: 0.6rem;
+  color: #dddddd;
+}
+
+.topTracksSection ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
