--- a/src/styles/TopTracks.module.css
+++ b/src/styles/TopTracks.module.css
@@ -19,7 +19,7 @@
 .topTracksSection {
   position: relative;
   padding-left: 1rem;
-  padding: 0.5rem;
+  padding-bottom: 0.7rem;
   border-radius: 12px;
   color: #cfced3;
   overflow: hidden;
@@ -119,7 +119,7 @@
 .columnsWrapper {
   display: flex;
   justify-content: space-between;
-  gap: 0.5rem;
+  gap: 0.7rem;
 }
 
 .column {
@@ -153,8 +153,8 @@
   border: 2px solid transparent;
   border-image: linear-gradient(
     45deg,
-    rgba(0, 255, 255, 0.7),
-    rgba(255, 0, 255, 0.7)
+    rgba(0, 255, 255, 0.9),
+    rgba(255, 0, 255, 0.6)
   );
   border-image-slice: 1;
   color: #cfced3;
