--- a/src/styles/ArtistSpotlight.module.css
+++ b/src/styles/ArtistSpotlight.module.css
@@ -87,7 +87,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-top: 0.5rem;
-  color: #fff;
+  color: #df2020;
   letter-spacing: 1px;
   font-weight: 400;
   animation: fadeIn 1.5s ease-in-out 0.5s forwards;
