Change color on community stats section

--- a/src/styles/StatsSection.module.css
+++ b/src/styles/StatsSection.module.css
@@ -1,6 +1,6 @@
 .statsSection {
     padding: 1rem;
-    background-color: #fff5e6;
+    background-color: #b68439;
     border-radius: 12px;
     text-align: center;
   }
