--- a/src/styles/StatsSection.module.css
+++ b/src/styles/StatsSection.module.css
@@ -1,6 +1,6 @@
 .statsSection {
     padding: 1rem;
-    background-color: #494847;
+    background-color: #72706e;
     border-radius: 12px;
     text-align: center;
   }
