Change color of social links

--- a/src/styles/ArtistSpotlight.module.css
+++ b/src/styles/ArtistSpotlight.module.css
@@ -149,7 +149,7 @@
 }
 
 .socialLinks a {
-  color: #d7d5d5;
+  color: #cfced3;
   font-size: 1rem;
   text-decoration: none;
   filter: drop-shadow(0 0 2px rgba(152, 160, 160, 0.7));
