Change color of stats section

--- a/src/styles/StatsSection.module.css
+++ b/src/styles/StatsSection.module.css
@@ -1,6 +1,6 @@
 .statsSection {
     padding: 1rem;
-    background-color: #72706e;
+    background-color: #b7b3af;
     border-radius: 12px;
     text-align: center;
   }
